force-app/main/default/objects/Product_Availability__c/Product_Availability__c.object-meta.xml
<CustomObject>
    <label>Product Availability</label>
    <nameField>
        <label>Product Availability Number</label>
        <type>AutoNumber</type>
        <displayFormat>PA-{000000}</displayFormat>
    </nameField>
    <pluralLabel>Available Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>