force-app/main/default/objects/Product_Availability__c/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <label>Availability</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>New Sales</fullName><default>true</default><label>New Sales</label></value>
            <value><fullName>Amendments Only</fullName><default>false</default><label>Amendments Only</label></value>
            <value><fullName>Renewals Only</fullName><default>false</default><label>Renewals Only</label></value>
            <value><fullName>Not Available</fullName><default>false</default><label>Not Available</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>