force-app/main/default/objects/Product_Availability__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Available Products</relationshipLabel>
    <relationshipName>Available_Products</relationshipName>
    <type>Lookup</type>
</CustomField>