force-app/main/default/objects/Product_Availability__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Make</label>
    <referenceTo>Make__c</referenceTo>
    <relationshipLabel>Available Products</relationshipLabel>
    <relationshipName>Available_Products</relationshipName>
    <type>Lookup</type>
</CustomField>