force-app/main/default/objects/Product_Availability__c/fields/Manufacturer_Code__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Code__c</fullName>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Manufacturer_Code</valueSetName>
    </valueSet>
</CustomField>